# bomb

./: .env.template  .gitignore  Dockerfile  README.md  client_config.json  entrypoint.sh  flow.mermaid  fly.toml  main.py  pyproject.toml  requirements.txt  schema.prisma  server.db  server.db-journal
.github/workflows/: build.yml  deploy.yml
client/: api.py  app.py  config_manager.py
client/assets/maps/: ort.json  squares.json  standard.json
client/assets/songs/: game.py  shed_theme.mpeg
client/assets/sounds/: bomb_explosion.mpeg  desert_theme.mpeg
client/components/: __init__.py  base.py  input.py  state.py  text.py
client/game/: __ini__.py  base_block.py  bomb.py  maps.json  particles.py  player.py  players.py
client/scenes/: __init__.py  base.py  config.py  game.py  game_over.py  initial_scene.py  login.py  main_menu.py  matchmaking.py  matchmaking_new.py  start.py
client/services/: __init__.py  api.py  auth.py  base.py  game.py  game_over.py  matchmaking.py
client/subscenes/: __init__.py  base.py  config.py  inventory.py  pause.py
core/: abstract.py  config.py  constants.py  serialization.py  ssl_config.py  types.py
core/maps/: alt_map.json  base_map.json  map1.json
core/models/: auth.py  game.py  match.py  matchmaking.py  network.py  partials.py  ws.py
migrations/20250410134818_init/: migration.sql
migrations/20250417195538_/: migration.sql
migrations/20250418200835_remove_unused_models/: migration.sql
server/: app.py
server/api/: auth.py  base.py  dependencies.py  match.py  ws.py
server/api/services/: auth.py
server/services/: __init__.py  auth.py  game.py  matchmaking.py  matchmaking_queue.py
server/utils/: compression.py
server/ws/: base.py
